# joss-reproduction-package

./: .gitignore  README.md  flake.nix  pyproject.toml
config/: alumet-config.toml  alumet-config_nvml.toml
notebooks/: full_comparison.py  parallel.py  parallel_nvml.py  phases-conc.py  phases-stress.py  phases.py  prepare_data.py  sequential.py  sequential_nvml.py
programs/: nbody-gpu.py  nbody.c
programs/timer/: Cargo.toml
programs/timer/src/: main.rs
scripts/: install_nix.sh  run_notebook.sh  script-g5k.sh  script.sh  setup.sh  setup_nix.sh
src/: lib.py
utils/: power.R
